--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,3 +10,6 @@ METAIXUSS_BASE := '${@os.path.normpath("${LAYERDIR}/../")}'
 # Prevent current directory creeping into sstate objects. Otherwise, building
 # in another TOPDIR will cause recipes using this variable to be rebuilt.
 METAIXUSS_BASE[vardepvalue] = 'meta-ixuss'
+
+# Additional license directories.
+LICENSE_PATH += "${LAYERDIR}/conf/license"
