Cleanup after https://github.com/OpenVisionE2/openvision-development-platform/commit/95a9fef5cc222d72930511fb04e345c4663fe027

--- a/conf/machine/ixussone.conf
+++ b/conf/machine/ixussone.conf
@@ -5,7 +5,7 @@
 MTD_ROOTFS = "mtd2"
 MTD_KERNEL = "mtd1"
 
-IMAGEDIR ?= "medialink/ixussone"
+IMAGEDIR = "medialink/ixussone"
 
 require conf/machine/include/ixuss.inc
 
