--- a/conf/machine/ixusszero.conf
+++ b/conf/machine/ixusszero.conf
@@ -5,7 +5,7 @@
 MTD_ROOTFS = "mtd0"
 MTD_KERNEL = "mtd1"
 
-IMAGEDIR ?= "medialink/ixusszero"
+IMAGEDIR = "medialink/ixusszero"
 
 require conf/machine/include/ixuss.inc
 
